fix spacing on initial letter

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10152,7 +10152,7 @@ ng-view {
 @supports (initial-letter: 3) or (-webkit-initial-letter: 3) {
   .drop-cap::first-letter {
     font-weight: bold;
-    margin-right: 0.5em;
+    margin-right: 0.25em;
     initial-letter: 2;
     -webkit-initial-letter: 2;
   }
